assets/scss/base.scss
/**
 * That's for the base styling of the app
 * things that are not generic enough to be put in the sdk
 * but also do not belong into any specify component
 *
 */

%cc-flex-column, 
.cc-flex-column {
    @extend %flexbox;

    @include flex-direction(column);
}

// the page wrapper needs to be `position:relative` for the animations
// since those need `position: absolute

.cc-page-wrapper {
    position: relative;
}

.cc-no-modern-flexbox {
    .cc-page-wrapper {
        overflow: hidden;
    }
}

.cc-has-overflow-support.cc-modern-flexbox {
    .cc-main-wrapper {
        @extend %cc-flex-column;
        @include flex(1);
        height: 100%;
    }
    .cc-page-wrapper {
        @include flex(1);
    }
}

.cc-has-no-overflow-support{
    .cc-main-wrapper{
        // if we use `height` instead of `min-height` scrolling does not
        // work anymore on Android 2.3. I love the web!
        min-height: 100%;
    }
}

.cc-ipad-ios-7 {
    position: fixed;
    top:0;
}

.cc-ipad-ios-7 > body {
    position: absolute;
    top:0;
    bottom:0;
}

